Risolto bug per il quale se un utente veniva eliminato, non veniva correttamente sostituito con l'utente 0 all'interno delle sfide alle quali ha partecipato. Modificati anche acluni colori per fare in modo che il testo sia più facilmente visibile

--- a/GuessTheWord(Client)/src/main/resources/it/guesstheword/StyleSheet.css
+++ b/GuessTheWord(Client)/src/main/resources/it/guesstheword/StyleSheet.css
@@ -309,7 +309,7 @@
 }
 
 #testo .text {
-    -fx-fill: #cbd5e0 !important;
+    -fx-fill: f5f5f5 !important;
     -fx-font-size: 16px;
 }
 
